--- a/assets/css/style_resources.css
+++ b/assets/css/style_resources.css
@@ -6,27 +6,23 @@
 .blog-post-3,
 .blog-post-2 img,
 .blog-post-3 img {
-  display: block;
-}
+  display: block;}
 
 /* - HIDDEN - */
 .newsletter-container,
 .blog-container img,
 .landing-text,
 .landing-image-container {
-  display: none;
-}
+  display: none;}
 
-/* -------------- BLOG -------------- */
+/* - BLOG - */
 .blog-container {
   height: auto;
   position: absolute;
   top: 7em;
   left: 25.4em;
   flex-direction: column;
-  gap: 3em;
-}
-
+  gap: 3em;}
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
@@ -42,35 +38,26 @@
     rgba(8, 255, 255, 0.8),
     rgba(255, 25, 224, 0.8),
     rgba(255, 25, 224, 0.1)
-  ) 1 2 10% 90%;
-}
-
+  ) 1 2 10% 90%;}
 .blog-container h2 {
   margin: 0em;
   padding: 0.2em;
   text-align: center;
   font-family: "Conthrax";
-  font-size: clamp(1rem, 1vw + 1rem, 2rem);
-}
-
+  font-size: clamp(1rem, 1vw + 1rem, 2rem);}
 .blog-container h3 {
   text-align: start;
-  font-size: clamp(0.2rem, 1vw + 0.8rem, 2rem);
-}
-
+  font-size: clamp(0.2rem, 1vw + 0.8rem, 2rem);}
 .blog-container p {
   text-align: center;
   padding: 0.2em 0.3em;
-  font-size: clamp(1rem, 1vw + 1rem, 3rem);
-}
-
+  font-size: clamp(1rem, 1vw + 1rem, 3rem);}
 .blog-container a {
   float: none;
   text-decoration: unset;
-  color: white;
-}
+  color: white;}
 
-/* -------------- FOOTER -------------- */
+/* - FOOTER - */
 .footer-container {
   display: flex;
   justify-content: center;
@@ -87,15 +74,11 @@
     #FF00FF 10%,
     rgb(0, 255, 255) 60%,
     #FF00FF 70%
-  ) 1 2 10%;
-}
-
+  ) 1 2 10%;}
 .social-links {
   position: relative;
   top: 0.3em;
-  list-style: none;
-}
-
+  list-style: none;}
 .social-links li a i {
   width: 70px;
   height: 70px;
@@ -107,11 +90,10 @@
   transition: all 0.35s ease-in-out;
   -moz-transition: all 0.35s ease-in-out;
   -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;
-}
-/* RESPONSIVENESS: MEDIA QUERIES */
+  -o-transition: all 0.35s ease-in-out;}
 
-/* 320px = 20em */
+/* - MEDIA QUERIES - */
+
 @media screen and (min-width: 20em) and (max-width: 119.938em) {
 
     /* - VISIBLE - */
@@ -174,10 +156,7 @@
       height: 42px;
       line-height: 2.7rem;
       font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-    }
-}
-  
-/* 768px = 48em */
+    }}
 @media screen and (min-width: 48em) and (max-width: 64em) {
   
     /* -------------- BLOG -------------- */
@@ -191,6 +170,4 @@
     .blog-post-2,
     .blog-post-3 {
       min-width: 25em;
-    }
-}
-  
+    }}
