--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
   color: white;
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: black;}
 
 /* - HIDDEN - */
@@ -77,35 +77,13 @@ body {
   text-transform: uppercase;
   text-decoration: unset;}
 
-/* - LANDING VIDEO - */ 
-.video-container {
-  position: absolute;
-  height: 3em;
-  width: 100%;
-  overflow: hidden; 
-  z-index: -100;}
-.video-container video {
-  position: relative;}
-.landing-video,
-.landing-overlay { 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 300%;
-  min-height: 300%;
-  transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(30deg);
-  background-size: cover;
-  background-position: center;}
-.landing-overlay {
-  position: absolute;
-  background: #524399;
-  mix-blend-mode: overlay;}
 
 /* - LANDING IMAGE - */ 
 .landing-image-container {
     height: 100vh;
     width: 100%;
-    overflow: hidden;}
+    overflow: hidden;
+  }
 .landing-image {
     width: 100%;
     height: 100%;}
@@ -136,7 +114,8 @@ body {
     position: absolute;
     top: 7em;
     left: 5em;
-    height: auto;}
+    height: auto;
+    margin-bottom: 5em;}
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
@@ -327,19 +306,6 @@ input[type="email"] {
     font-size: clamp(0.2rem, 1vw + 1rem, 4rem);
 }
 
-/* -------------- LANDING VIDEO -------------- */ 
-.video-container {
-    position: absolute;
-    overflow: hidden; 
-    z-index: -100;
-    height: 7em;
-}
-
-.landing-video,
-.landing-overlay { 
-    transform: translateX(-50%) translateY(-30%) rotateX(20deg) rotateY(130deg);
-}
-
 
 /* -------------- BLOG -------------- */
 .blog-container {
@@ -349,6 +315,7 @@ input[type="email"] {
     position: relative;
     left: 0em;
     top: 0em;
+    margin-bottom: 5em;
   }
   
   .blog-post img {
@@ -390,41 +357,36 @@ input[type="email"] {
     font-size: clamp(0.5rem, 1vw + 0.8rem, 2rem);
   }
   
-  /* -------------- FOOTER-------------- */
-  .footer-container {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 4em;
-    background-color: rgba(0, 0, 0, 0.9);
-    border-top: 2px solid;
-    border-image: linear-gradient(
+/* -------------- FOOTER-------------- */
+    .footer-container {
+      position: fixed;
+      left: 0;
+      right:0;
+      bottom: 0;
+      width: 100%;
+      height: 72px;
+      background-color: rgba(0, 0, 0, 0.9);
+      border-top: 2px solid;
+      border-image: linear-gradient(
         to left,
         #FF00FF 10%,
         rgb(0, 255, 255) 60%,
         #FF00FF 70%
       ) 1 2 10%;
-  }
-  
-  #footer-details {
-    padding: 0.3em;
-  }
-  
-  .social-links li a i {
-    width: 42px;
-    height: 42px;
-    line-height: 2.7rem;
-    font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-    border-radius: 50%;
-    color: white;
-    background-color: rgb(35, 0, 236);
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-  }}
+    }
+    .social-links {
+    position: relative;
+    top: 0.3em;
+    list-style: none;}
+    .social-links li a i {
+      width: 42px;
+      height: 42px;
+      line-height: 2.7rem;
+      font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
+    }}
+
+
+
 @media screen and (min-width: 23.438em) and (max-width:119.938em) {
     .blog-post {
       max-width: 23em;
