--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 /* Global */
 * {
+  /* outline: greenyellow 2px solid; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;}
@@ -54,7 +55,7 @@ body {
   text-decoration: unset;
   font-size: clamp(3rem, 1vw + 1rem, 5rem);
   margin: 0.5em;
-  font-family: "Conthrax";
+  
   filter: drop-shadow(0px 3px 2px rgba(8, 245, 253, 0.9));}
 
 /* - NAV-BAR - */
@@ -84,9 +85,7 @@ body {
     width: 100%;
     overflow: hidden;
   }
-.landing-image {
-    width: 100%;
-    height: 100%;}
+
 .landing-image img {
     position: relative;
     top: -5%;
@@ -99,9 +98,11 @@ body {
 /* - LANDING TEXT - */ 
 .landing-text {
     margin: 0;
-    padding: 3em 2em;
-    position: absolute;
-    top: 25.5em;}
+    padding: 0em 2em;
+    position: relative;
+    top: -10em;
+    width: 50%;
+}
 .landing-text h2 {
     font-size: clamp(5rem, 1vw + 1rem, 5rem);}
   
@@ -110,12 +111,11 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    gap: 3em;
-    position: absolute;
-    top: 7em;
-    left: 5em;
-    height: auto;
-    margin-bottom: 5em;}
+    gap: 3.5em;
+    position: relative;
+    top: -40em;
+    left: 0em;
+    margin-bottom: 0em;}
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
@@ -171,12 +171,13 @@ body {
 
 /* - NEWSLETTER - */
 .newsletter-container {
-    position: absolute;
-    top: 27em;
-    left: 49.3em;
     display: flex;
     align-items: center;
-    justify-content: center;}
+    justify-content: center;
+    position: relative;
+    top: -37em;
+    left: 23.2em;
+  }
 .newsletter {
     padding: 0.5em;}
 .newsletter h3 { 
@@ -196,7 +197,6 @@ input[type="email"] {
     color: black;
     outline: unset;}
 .form-button {
-    font-family: "Conthrax";
     width: 100%;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
@@ -213,7 +213,7 @@ input[type="email"] {
 /* - FOOTER - */
 .footer-container {
     width: 30%;
-    height: auto;
+    height: 4.5em;
     position: absolute;
     left: 48em;
     bottom: 0.2em;
@@ -311,17 +311,23 @@ input[type="email"] {
 .blog-container {
     display: flex;
     justify-content: center;
-    margin: 1em;
+    /* flex-direction: column; */
+    /* height: 22em; */
+    width: 100%;
     position: relative;
-    left: 0em;
-    top: 0em;
-    margin-bottom: 5em;
+    bottom:30%; 
+    top:70%;
+    padding:0 0em;
+    margin: 1em 0;
+    gap:0;
+    margin-bottom: 4.5em;
   }
-  
+
   .blog-post img {
     padding: 0.5em;
-    margin-bottom: 0.5em;
-    width: 100%;
+    margin-bottom: 0.2em;
+    /* width: 100%; */
+    /* height: 5em; */
     border: 4px solid;
     border-image: linear-gradient(
         to bottom,
@@ -332,11 +338,6 @@ input[type="email"] {
       ) 1 2 10% 90%;
   } 
   
-  .blog-post h2 {
-    padding: 0.2em;
-    font-size: clamp(0.5rem, 1vw + 1rem, 3rem);
-  }
-  
   .blog-post h3 {
     font-size: clamp(0.2rem, 1vw + 0.8rem, 2rem);
   }
@@ -344,27 +345,29 @@ input[type="email"] {
   .blog-post h4 {
     display: block;
     font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
-    padding: 0.2em 0;
+    padding: 0;
+    margin: 0.2em 0;
   }
   
   .blog-post p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.2rem, 1vw + 0.5rem, 1rem);
-    margin: 0.5em 0;
+    margin: 0em 0;
   }
   
   .blog-post a {
     font-size: clamp(0.5rem, 1vw + 0.8rem, 2rem);
   }
-  
+
 /* -------------- FOOTER-------------- */
     .footer-container {
-      position: fixed;
+      
+      /* position: fixed; */
       left: 0;
       right:0;
       bottom: 0;
       width: 100%;
-      height: 72px;
+      height: 4.5em;
       background-color: rgba(0, 0, 0, 0.9);
       border-top: 2px solid;
       border-image: linear-gradient(
@@ -386,9 +389,12 @@ input[type="email"] {
     }}
 
 
-
+/* iPhone X */
 @media screen and (min-width: 23.438em) and (max-width:119.938em) {
-    .blog-post {
+  .blog-container {
+      padding:1em;
+    }  
+  .blog-post {
       max-width: 23em;
       min-height: 27em;
       position: relative;
@@ -409,22 +415,10 @@ input[type="email"] {
       font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
     }}
 @media screen and (min-width: 37.5em) and (max-width:119.938em) {
-    .blog-container {
-      margin-top: 3em;
-    }
-    .footer-container {
-      position: fixed;
-      bottom: 0;
-      height: auto;
-    }
-    .social-links li a i {
-      padding: 0;
-      width: 70px;
-      height: 70px;
-      line-height: 4.5rem;
-      font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
-    }}
+    
+   }
 @media screen and (min-width: 48em) and (max-width:119.938em) {
+
     .blog-post h4 {
       font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
       padding: 0.5em 0;
