Fix Scrolling Overlapping Issue on Footer

--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -1,3 +1,7 @@
+.body {
+overflow:scroll;
+    background-color: grey;
+}
 /* - HIDDEN - */
 .landing-text {
     display:none;}
@@ -7,7 +11,13 @@
 .contact-form-container {
     display:flex;
     align-items: center;
-    justify-content: center;}
+    justify-content: center;
+    margin-top: 0.5em;
+}
+.contact-form-container {
+    margin-bottom: 8.8em;
+}
+
 .contact-form,
 .newsletter-form {
     max-width: 18em;
@@ -18,7 +28,7 @@
     padding: 0.4em;
     text-align: center;
     color:white;
-    font-size: clamp(0.5rem, 1vw + 1rem, 2rem);
+    font-size: clamp(0.5rem, 1vw + 0.9rem, 2rem);
     background-color: black;}
 #contact-form-email,
 #email-form  {
@@ -69,75 +79,38 @@ input[type="email"]{
     padding: 0.7em;}
 
 /* - FOOTER - */
-.footer-container {
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4.5em;
-  background-color: rgba(0, 0, 0, 0.9);
-  border-top: 2px solid;
-  border-image: linear-gradient(
-    to left,
-    #FF00FF 10%,
-    rgb(0, 255, 255) 60%,
-    #FF00FF 70%
-  ) 1 2 10%;}
-.social-links {
-  position: relative;
-  top: 0.3em;
-  list-style: none;}
-.social-links li a i {
-  width: 70px;
-  height: 70px;
-  line-height: 4.5rem;
-  font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
-  border-radius: 50%;
-  color: white;
-  background-color: rgb(35, 0, 236);
-  transition: all 0.35s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;}
-
-
-
 
 
 /* - MEDIA QUERIES - */
 @media screen and (min-width: 20em) and (max-width:64em) {
-
+.body {
+   
+    background-color: grey;
+}
 /* ---- FORMS ---- */
 .newsletter-container,
 .contact-form-container {
     margin: 0.8em;
     padding: 0.5em 1.7em;
+    
 }
+.contact-form-container {
+    margin-bottom: 3em;
+}
+
 .contact-form,
 .newsletter-form {
     max-width: 18em;
     position: relative;
     top: -1em;
-}}
+}
 
 /* -------------- FOOTER-------------- */
     .footer-container {
-      position: fixed;
-      left: 0;
-      right:0;
-      bottom: 0;
+
+      /* top: -10em; */
       width: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
-      border-top: 2px solid;
-      border-image: linear-gradient(
-        to left,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-      ) 1 2 10%;
+      /* height:0; */
     }
   
     .social-links li a i {
@@ -146,39 +119,54 @@ input[type="email"]{
       line-height: 2.7rem;
       font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
     }
+}
 
-
-@media screen and (min-width: 23.438em) {
+@media screen and (min-width: 23.438em) and (max-width:119.938em){
+    
+    .newsletter-container {
+       margin-top: 2em;
+    }
+    
     .contact-form-container {
-    position: relative;
-    top: 3em;   
-    }}
-@media screen and (min-width: 37.5em) and (max-width:119.938em) {
-
-.newsletter-container,
-.contact-form-container {
-    margin-top: 2em;
-}
-
-.footer-container{
-position: fixed;
-bottom:0;
-height: auto;
-}
-.social-links li a i {
-padding: 0;
-width: 70px;
-height: 70px;
-line-height:4.5rem;
-font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
+    margin-bottom: 8em;
 }}
+@media screen and (min-width: 25em) and (max-width:119.938em) {
+
+ .newsletter-container {
+       margin-top: 4em;
+    }
+    
+    .contact-form-container {
+    margin-bottom: 10em;
+}}
+
+@media screen and (min-height: 50.75em) and (max-width:119.938em){
+
+ .newsletter-container {
+       margin-top: 4em;
+    }
+    
+    .contact-form-container {
+    margin-bottom: 15em;
+}}
+
+@media screen and (min-width: 37.5em) and (max-width:119.938em){
+ .newsletter-container {
+       margin-top: 6em;
+    }
+    
+    .contact-form-container {
+    margin-bottom: 10em;
+}}
+
+
 @media screen and (min-width: 48em) and (max-width:119.938em) {
-
-.newsletter-container,
-.contact-form-container { 
-margin-top: 6em;
-}
-.newsletter-form,
-.contact-form {
-min-width: 30em;
+    .contact-form-container {
+    margin-bottom: 23em;
 }}
+
+@media screen and (min-width: 62em) and (max-width:119.938em) {
+        .contact-form-container {
+    margin-bottom: 35.5em;
+}}
+
