--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /* Global */
 * {
-  /* outline: greenyellow 2px solid; */
+  /* outline: 2px greenyellow solid; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;}
@@ -12,7 +12,7 @@ body {
   font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
   color: white;
   width: 100%;
-  /* overflow: hidden; */
+  overflow: hidden;
   background-color: black;}
 
 /* - HIDDEN - */
@@ -44,7 +44,7 @@ body {
   justify-content: space-between;
   width: 100%;
   height: 3em;
-  background-color: rgba(7, 7, 7, 0.2);
+  background-color:black;
   border-bottom: 2px solid;
   border-image: linear-gradient(to right, #FF00FF 10%, rgb(0, 255, 255) 60%, #FF00FF 70%) 1 2 10%;}
 .logotype {
@@ -83,7 +83,6 @@ body {
 .landing-image-container {
     height: 100vh;
     width: 100%;
-    overflow: hidden;
   }
 
 .landing-image img {
@@ -98,24 +97,24 @@ body {
 /* - LANDING TEXT - */ 
 .landing-text {
     margin: 0;
-    padding: 0em 2em;
+    padding: 0em 3em;
     position: relative;
     top: -10em;
     width: 50%;
 }
 .landing-text h2 {
-    font-size: clamp(5rem, 1vw + 1rem, 5rem);}
+    font-size: clamp(4.5rem, 1vw + 1rem, 5rem);}
   
 /* - BLOG - */
 .blog-container {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    gap: 3.5em;
+    gap: 4.5em;
     position: relative;
     top: -40em;
     left: 0em;
-    margin-bottom: 0em;}
+    margin-bottom: 2em;}
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
@@ -143,20 +142,18 @@ body {
       rgba(255, 25, 224, 0.8),
       rgba(255, 25, 224, 0.1)
     ) 1 2 10% 90%;} 
-.blog-post h2,
-.blog-post-2 h2,
-.blog-post-3 h2{
-    text-align: start;
-    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);}
+
 .blog-post h3,
 .blog-post-2 h3,
 .blog-post-3 h3 {
     margin: 0.3em 0;
     text-align: start;
-    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);}
+    font-size: clamp(1rem, 1vw + 0.5rem, 3rem);
+  }
 .blog-post p,
 .blog-post-2 p,
 .blog-post-3 p {
+  min-height:8em; 
     text-align: start;
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(1rem, 0.5vw + 1rem, 1rem);}
@@ -175,11 +172,13 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
-    top: -37em;
-    left: 23.2em;
+    top: -39em;
+    left: 22.5em;
+   
   }
 .newsletter {
-    padding: 0.5em;}
+    padding: 0.5em;
+   width: 18em;}
 .newsletter h3 { 
     text-align: center;
     color: cyan;
@@ -201,7 +200,7 @@ input[type="email"] {
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
     color: cyan;
-    border: 0.2px solid;
+    border: 10px solid;
     border-image: linear-gradient(
       to bottom,
       rgba(50, 8, 201, 0.5),
@@ -214,9 +213,9 @@ input[type="email"] {
 .footer-container {
     width: 30%;
     height: 4.5em;
-    position: absolute;
-    left: 48em;
-    bottom: 0.2em;
+    position: relative;
+    left: 47.2em;
+    top:-38.5em;
     display: flex;
     justify-content: space-evenly;}
 .social-links {
@@ -240,8 +239,10 @@ input[type="email"] {
     -o-transition: all 0.35s ease-in-out;}
   
 /* - MEDIA QUERIES - */
-@media screen and (min-width: 20em) and (max-width:119.938em) {
-
+@media screen and (min-width: 0em) and (max-width: 119em){
+body {
+  overflow-y:scroll;
+}
 /* - HIDDEN - */
 .landing-text,
 .landing-image-container,
@@ -311,17 +312,21 @@ input[type="email"] {
 .blog-container {
     display: flex;
     justify-content: center;
-    /* flex-direction: column; */
-    /* height: 22em; */
     width: 100%;
+    height: auto;
     position: relative;
     bottom:30%; 
     top:70%;
     padding:0 0em;
     margin: 1em 0;
+    margin-bottom: 0.5em;
     gap:0;
-    margin-bottom: 4.5em;
+    
   }
+.blog-post {
+  height: auto;
+}
+  
 
   .blog-post img {
     padding: 0.5em;
@@ -338,7 +343,9 @@ input[type="email"] {
       ) 1 2 10% 90%;
   } 
   
-  .blog-post h3 {
+  .blog-post h3,
+  .blog-post-2 h3,
+  .blog-post-3 h3 {
     font-size: clamp(0.2rem, 1vw + 0.8rem, 2rem);
   }
   
@@ -361,13 +368,13 @@ input[type="email"] {
 
 /* -------------- FOOTER-------------- */
     .footer-container {
-      
-      /* position: fixed; */
+      /* display: none; */
       left: 0;
       right:0;
       bottom: 0;
+      top: 0;
       width: 100%;
-      height: 4.5em;
+      height:4.5em;
       background-color: rgba(0, 0, 0, 0.9);
       border-top: 2px solid;
       border-image: linear-gradient(
@@ -377,10 +384,6 @@ input[type="email"] {
         #FF00FF 70%
       ) 1 2 10%;
     }
-    .social-links {
-    position: relative;
-    top: 0.3em;
-    list-style: none;}
     .social-links li a i {
       width: 42px;
       height: 42px;
@@ -389,51 +392,53 @@ input[type="email"] {
     }}
 
 
-/* iPhone X */
-@media screen and (min-width: 23.438em) and (max-width:119.938em) {
-  .blog-container {
-      padding:1em;
-    }  
-  .blog-post {
-      max-width: 23em;
-      min-height: 27em;
-      position: relative;
-      top: 0em;
-      left: 0;
-    }
-    .blog-post h4 {
-      font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-      padding: 0.5em 0;
-    }
-    .blog-post h3 {
-      font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
-    }
-    .blog-container p {
-      font-size: clamp(0.5rem, 0.5vw + 1rem, 0.9rem);
-    }
-    .blog-container a {
-      font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
-    }}
-@media screen and (min-width: 37.5em) and (max-width:119.938em) {
-    
-   }
-@media screen and (min-width: 48em) and (max-width:119.938em) {
+@media screen and (min-width: 23em) and (max-width:64em){
+  /* -------------- BLOG -------------- */
+.blog-container {
+    margin-bottom:4.2em;
+    /* height:clamp(1em, 60vh, 50em); */
+  }
+  
+}
+@media screen and (min-width: 25em) and (max-width:64em){
+  /* -------------- BLOG -------------- */
+.blog-container {
+    margin-bottom:5.87em;
+  }
+}
+/* HEIGHT !! */
+@media screen and (min-height: 50.75em) and (max-width:64em){
+  /* -------------- BLOG -------------- */
+.blog-container {
+    margin-bottom:7.8em;
+  }
+}
+@media screen and (min-width: 37.5em) and (max-width:64em){
+  /* -------------- BLOG -------------- */
+.blog-container {
+   /* display: none; */
+    margin-bottom:7.5em;
 
-    .blog-post h4 {
-      font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-      padding: 0.5em 0;
-    }
-    .blog-post h3 {
-      font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
-    }
-    .blog-container p,
-    .blog-container li {
-      font-size: clamp(1rem, 0.5vw + 1rem, 0.9rem);
-    }
-    .blog-container a  {
-      font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
-    }
-    .blog-post {
-      min-height: 30em;
-      left: 0;
-    }}
+  }
+  .blog-post {
+   min-width: 30em;
+  
+  }
+  .blog-post img {
+    width: 50%;
+
+    
+  }
+}
+@media screen and (min-width: 48em) and (max-width:64em){
+.blog-container {
+  margin-top: 5em;
+    margin-bottom:9.1em;
+  }
+}
+@media screen and (min-width: 62em) and (max-width:64em) {
+  .blog-container {
+  /* margin-top: 5em; */
+    margin-bottom:13.4em;
+  }
+}
