--- a/assets/css/style_article.css
+++ b/assets/css/style_article.css
@@ -59,7 +59,8 @@ rgba(255, 25, 224, 0.1)
 .blog-post p {
     text-align:start;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(1rem, 0.5vw + 1rem, 1rem);}
+    font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
+}
 .blog-post a {
     float: right;
     position: relative;
@@ -68,20 +69,28 @@ rgba(255, 25, 224, 0.1)
     font-size: clamp(1rem, 1vw + 1rem, 1.2rem);
     color: cyan;}
 
-/* - MEDIA QUERIES - */ 
-@media screen and (min-width: 20em) and (max-width: 119.938em){
-  
 
+.footer-container {
+    position: fixed;
+    bottom: 0;
+}
+
+/* - MEDIA QUERIES - */ 
+@media screen and (min-width: 20em) and (max-width: 64em){
+  
 /* -------------- BLOG -------------- */
+.blog-container-wrapper {
+    padding: 0.5em 1em;
+}
 .blog-container {
     background-color: black;
     position: relative;
     top: 0em;
     left:0;
-    min-width:16em;
-    height: 21em;
-    padding: 0.4em;
-    margin: 1em 1em;
+    /* height: auto; */
+    padding: 0 0.5em;
+    margin: 1em 0;
+    margin-bottom: 5em;
     border-top: 3px solid ;
     border-right: 3px solid ;
     border-bottom: 3px solid;
@@ -112,91 +121,21 @@ rgba(255, 25, 224, 0.1)
     ) 1 2 10% 90%; } 
 
 .blog-post h2 {
-    font-size: clamp(0.5rem, 0.5vw + 1rem, 1rem);
+    font-size: clamp(0.3rem, 0.5vw + 0.8rem, 3rem);
     margin: 0em 0;
     text-align:start;
 }
 .blog-post h3 {
-    font-size: clamp(0.5rem, 0.5vw + 1rem, 0.8rem);
-    margin: 0.3em 0;
+    font-size: clamp(0.5rem, 0.8vw + 1rem, 3rem);
+    margin: 0.1em 0;
     text-align:start;
 }
-.blog-container p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(0.2rem, 0.5vw + 0.7rem, 0.5rem);
-}
-.blog-container li {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(0.2rem, 0.5vw + 0.7rem, 0.5rem);
-}}
-@media screen and (min-width: 23.438em) and (max-width:119.938em) {
-    .blog-container {
-        min-height: 28em;
-        margin-top: 2em;
-    }
-    
-    .blog-post {
-        position: relative;
-        top: 0em;
-        height: auto;
-    }
-
-    .blog-container p,
-    .blog-container li  {
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: clamp(0.5rem, 0.5vw + 1rem, 0.6rem);
-    }}
-@media screen and (min-width: 37.5em) and (max-width:119.938em) {
-   
-
-.blog-container {
-max-width: 35em;
-min-height: 33em;
-position: relative;
-left: 0;
-}
-
 .blog-container p,
 .blog-container li  {
-font-family: Arial, Helvetica, sans-serif;
-font-size: clamp(0.5rem, 0.5vw + 0.7rem, 0.9rem);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: clamp(0.2rem, 0.2vw + 0.8rem, 2rem);
 }
-.blog-post h3{
-font-size: clamp(2rem, 1vw + 1rem, 5rem);
 }
 
-.social-links li a i {
-padding: 0;
-width: 70px;
-height: 70px;
-line-height:4.5rem;
-font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
-}}
-@media screen and (min-width: 48em) and (max-width:119.938em) {
-.blog-container {
-margin-top:5em;
-min-height: 40em;
-position: relative;
-left: 5.5em;
-
-}
-.blog-container p,
-.blog-container li  {
-font-family: Arial, Helvetica, sans-serif;
-font-size: clamp(0.8rem, 0.5vw + 0.7rem, 1rem);
-}}
-@media screen and (min-width: 64em) and (max-width:119.938em) {
-    .blog-container {
-        margin: 0em;
-        margin-top: 3em;
-        max-width: 45em;
-        min-height: 55em;
-
-    }
-    .blog-container p,
-    .blog-container li  {
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: clamp(1rem, 1vw + 0.8rem, 2rem);
-    }}
 
 
