--- a/assets/css/style_article.css
+++ b/assets/css/style_article.css
@@ -5,14 +5,23 @@
 .landing-text {
     display: none;} 
 
+
+/* - LANDING IMAGE - */ 
+.landing-image-container {
+    height: 95vh;
+  }
+
 /* - BLOG - */
+.blog-container-wrapper {
+    position: relative;
+   top:9em;
+   margin-bottom:3em;
+   height:0em;
+   width:100%;
+}
 .blog-container {
-    position: absolute;
-    top: 4em;
-    left: 15em;
-    max-width: 100%;
-    height: auto;
-    margin: auto auto;
+    margin:0;
+    padding:0;
     text-align: center;
     filter: drop-shadow(0 0 8px rgba(14, 0, 214, 0.966));}
 .blog-container li {
@@ -21,8 +30,9 @@
     font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
     text-align: start;}
 .blog-post {
+    /* outline: auto; */
 height: auto;
-max-width:40em;
+max-width: 30em;
 background-color: black;
 border-top: 4px solid;
 border-right: 4px solid;
@@ -57,6 +67,8 @@ rgba(255, 25, 224, 0.1)
     text-align:start;
     font-size: clamp(1rem, 0.5vw + 1rem, 2rem);}
 .blog-post p {
+    height: auto;
+    margin:1em 0;
     text-align:start;
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
@@ -69,28 +81,35 @@ rgba(255, 25, 224, 0.1)
     font-size: clamp(1rem, 1vw + 1rem, 1.2rem);
     color: cyan;}
 
-
+/* - FOOTER - */
 .footer-container {
-    position: fixed;
-    bottom: 0;
+    top: -8em;
 }
 
+
 /* - MEDIA QUERIES - */ 
-@media screen and (min-width: 20em) and (max-width: 64em){
-  
+@media screen and (min-width: 0em) and (max-width:119em){
+
+    .body {
+        overflow:visible;
+    }
+
 /* -------------- BLOG -------------- */
 .blog-container-wrapper {
     padding: 0.5em 1em;
+    margin-bottom: 5em;
+    height:auto;
+    width: auto;
+    /* outline: auto; */
 }
 .blog-container {
     background-color: black;
     position: relative;
-    top: 0em;
+    top: -7em;
     left:0;
-    /* height: auto; */
-    padding: 0 0.5em;
-    margin: 1em 0;
-    margin-bottom: 5em;
+    width:17em;
+    height:auto;
+    padding: 0 0.2em;
     border-top: 3px solid ;
     border-right: 3px solid ;
     border-bottom: 3px solid;
@@ -105,8 +124,9 @@ rgba(255, 25, 224, 0.1)
 }
 .blog-post {
     height: auto;
+    width: 35em;
     margin: 0;
-    padding:0.5em;
+    /* padding:0.5em; */
     background-color: black;
     border-top: 0px solid;
     border-right: 0px solid;
@@ -121,21 +141,33 @@ rgba(255, 25, 224, 0.1)
     ) 1 2 10% 90%; } 
 
 .blog-post h2 {
-    font-size: clamp(0.3rem, 0.5vw + 0.8rem, 3rem);
+    /* font-size: clamp(0.3rem, 0.5vw + 0.8rem, 3rem); */
     margin: 0em 0;
     text-align:start;
 }
 .blog-post h3 {
-    font-size: clamp(0.5rem, 0.8vw + 1rem, 3rem);
+    font-size: clamp(0.2rem, 0.2vw + 1rem, 3rem);
     margin: 0.1em 0;
-    text-align:start;
+    /* text-align:start; */
 }
-.blog-container p,
-.blog-container li  {
+
+.blog-post li  {
+    margin-bottom: 0em;
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.2rem, 0.2vw + 0.8rem, 2rem);
 }
+.blog-post p,
+.blog-post p_1,
+.blog-post p_2 {
+    /* display: none; */
+    margin: 0.5em 0;
+    /* height: 3em; */
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: clamp(0.2rem, 0.2vw + 0.8rem, 2rem);
 }
 
+.footer-container {
+    top: 0;
+}
 
-
+}
