--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ body {
   font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
   color: white;
   width: 100%;
-  /* overflow: hidden; */
+  /* height: 1000px; */
+  overflow-x:hidden;
   background-color: black;}
 
 /* - HIDDEN - */
@@ -45,8 +46,13 @@ body {
   width: 100%;
   height: 3em;
   background-color:black;
-  border-bottom: 2px solid;
-  border-image: linear-gradient(to right, #FF00FF 10%, rgb(0, 255, 255) 60%, #FF00FF 70%) 1 2 10%;}
+  border-bottom: 4px solid;
+  border-image: linear-gradient(
+    to right,
+    #73028a 10%,
+    rgb(2, 233, 241) 60%,
+    #73028a 70%
+    ) 1 2 10%;}
 .logotype {
   position: relative;
   top: 0.15em;
@@ -81,7 +87,6 @@ body {
 
 /* - LANDING IMAGE - */ 
 .landing-image-container {
-    height: 100vh;
     width: 100%;
   }
 
@@ -89,8 +94,7 @@ body {
     position: relative;
     top: -5%;
     width: 100%;
-    height: 100%;
-    min-height: 33em;
+    height: 33em;
     background-size: cover;
     background-repeat: no-repeat;}
 
@@ -99,22 +103,31 @@ body {
     margin: 0;
     padding: 0em 3em;
     position: relative;
-    top: -10em;
+    top: -29em;
+    left:0.5em;
     width: 50%;
 }
 .landing-text h2 {
     font-size: clamp(4.5rem, 1vw + 1rem, 5rem);}
   
 /* - BLOG - */
+.blog-container-wrapper {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: -33em;
+  padding: 1em 0;
+  margin-top:1em;
+  margin-bottom:1em;
+
+}
 .blog-container {
     display: flex;
     justify-content: center;
     flex-direction: row;
     gap: 4.5em;
-    position: relative;
-    top: -40em;
     left: 0em;
-    margin-bottom: 2em;}
+    }
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
@@ -173,12 +186,12 @@ body {
     justify-content: center;
     position: relative;
     top: -39em;
-    left: 22.5em;
+    left: 22.7em;
    
   }
 .newsletter {
     padding: 0.5em;
-   width: 18em;}
+   width: 19em;}
 .newsletter h3 { 
     text-align: center;
     color: cyan;
@@ -214,10 +227,11 @@ input[type="email"] {
     width: 30%;
     height: 4.5em;
     position: relative;
-    left: 47.2em;
+    left: 47.3em;
     top:-38.5em;
     display: flex;
-    justify-content: space-evenly;}
+    justify-content: space-evenly;
+  }
 .social-links {
     display: flex;
     justify-content: center;
@@ -225,14 +239,14 @@ input[type="email"] {
     list-style: none;}
 .social-links li a i {
     text-align: center;
-    margin: 0.3em;
+    margin: 0.4em;
     width: 70px;
     height: 70px;
     line-height: 4.5rem;
     font-size: clamp(3rem, 1vw + 1rem, 5rem);
     border-radius: 50%;
     color: white;
-    background-color: rgb(35, 0, 236);
+    background-color: rgb(34, 2, 214);
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
@@ -242,7 +256,7 @@ input[type="email"] {
 @media screen and (min-width: 0em) and (max-width: 119em){
 
 .body {
-    overflow: visible;
+    overflow: scroll;
 }
 
 /* - HIDDEN - */
@@ -294,24 +308,18 @@ input[type="email"] {
     gap: 1.5em;
     list-style: none;
     margin: 1em;
+    margin-bottom: 1em;
     padding: 0;}
 .navbar a {
     color:#ffffff;
-    font-size: clamp(0.2rem, 1vw + 1rem, 4rem);}
+    font-size: clamp(0.2rem, 1vw + 1rem, 3rem);}
 
 /* -------------- BLOG -------------- */
 
 .blog-container-wrapper {
   display: flex;
   justify-content: center;
-}
-
-.blog-container {
-    display: flex;
-    justify-content: center;
-    width: 16em;
-    height: 22em;
-    position: relative;
+  position: relative;
     left: 0;
     bottom:30%; 
     top:70%;
@@ -319,6 +327,13 @@ input[type="email"] {
     margin: 0;
     margin-top: 1em;
     margin-bottom: 1em;
+}
+
+.blog-container {
+    display: flex;
+    justify-content: center;
+    width: 16em;
+    height: 22em;
     gap:0;
     
   }
@@ -332,7 +347,6 @@ input[type="email"] {
         rgba(255, 25, 224, 0.1)
       ) 1 2 10% 90%;
 }
-  
 
   .blog-post img {
     width: 12em;
@@ -362,9 +376,11 @@ input[type="email"] {
   
   .blog-post p {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(0.2rem, 1vw + 0.5rem, 1rem);
-    margin: 0em 0;
-    height: 11.5em;
+    font-size: clamp(0.2rem, 1vw + 0.55rem, 2rem);
+    margin: 0;
+    margin-bottom:1em;
+    height: 10em;
+    /* outline: auto; */
   }
   
   .blog-post a {
@@ -390,6 +406,7 @@ input[type="email"] {
       ) 1 2 10%;
     }
     .social-links li a i {
+      margin: 0.3em;
       width: 42px;
       height: 42px;
       line-height: 2.7rem;
@@ -399,82 +416,142 @@ input[type="email"] {
 
 @media screen and (min-width: 23em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.blog-container {
-  width: 25em;
+.blog-container-wrapper {
   margin-top:2em;
-    margin-bottom:3em;
-    height:25em;
+    margin-bottom:1em;
 
   }
-  
-}
-@media screen and (min-width: 25em) and (max-width:119em){
-  /* -------------- BLOG -------------- */
-.blog-container {
-  height: 29em;
-    margin-bottom:3.5em;
-  
+  .blog-container {
+    width:25em;
+    height:27em;
   }
-  
-    .blog-post img {
+    .blog-post p {
+      height:11em;
+    font-size: clamp(0.2rem, 1vw + 0.65rem, 2rem);
+  }
+  .blog-post img {
     width: 100%;
     height: 7em;
-    border: 4px solid;
-    border-image: linear-gradient(
-        to bottom,
-        rgba(8, 85, 201, 0.5),
-        rgba(8, 255, 255, 0.8),
-        rgba(255, 25, 224, 0.8),
-        rgba(255, 25, 224, 0.1)
-      ) 1 2 10% 90%;
-  } 
+    
+  }}
+@media screen and (min-width: 25em) and (max-width:119em){
+  /* -------------- BLOG -------------- */
+.blog-container-wrapper {
+
+    margin-bottom:3em;
+  
+  }
+.blog-container {
+  height: 29em;
+  }
+  
   .blog-post p {
-    height: 13em;
+    height: 12.5em;
     font-size: clamp(0.2rem, 1vw + 0.7rem, 3rem);
   }
 }
 /* HEIGHT !! */
 @media screen and (min-height: 50.75em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.blog-container {
-  height: 32em;
-    margin-bottom:5em;
+.blog-container-wrapper {
+
+    margin-bottom:3em;
   }
-  .blog-post h3 {
-    font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
-  }
-  .blog-post p {
-    /* outline: auto; */
-    height: 17em;
-    font-size: clamp(0.2rem, 1vw + 0.8rem, 3rem);
-  }
-}
-@media screen and (min-width: 37.5em) and (max-width:119em){
-  /* -------------- BLOG -------------- */
-.blog-container {
-   /* display: none; */
-    margin-bottom:7.5em;
+.blog-container{
+  height: 34em;
 
   }
   .blog-post {
-   min-width: 30em;
+    min-width:20em;
+  }
+  .blog-post h3 {
+    font-size: clamp(0.2rem, 1vw + 1.2rem, 3rem);
+  }
+  .blog-post p {
+    height: 14em;
+    font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
+  }
+}
+@media screen and (min-width: 37.5em) and (max-width:119em){
   
+  .header-container{
+    height:10em;
+  }
+  .navbar a {
+    font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
+  }
+  /* -------------- BLOG -------------- */
+.blog-container-wrapper {
+   /* display: none; */
+   margin-top:2em;
+    margin-bottom:2em;
+
+  }
+  .blog-container {
+    height:31.5em;
+  }
+  .blog-post {
+   min-width: 30em;
+  }
+  .blog-post p {
+    height: 8.5em;
+    font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
   }
   .blog-post img {
-    width: 50%;
-
+    width: 100%;
+    height:10em;
+    
     
   }
 }
 @media screen and (min-width: 48em) and (max-width:119em){
-.blog-container {
-  margin-top: 5em;
-    margin-bottom:9.1em;
+.blog-container-wrapper {
+  margin-top: 4.5em;
+  margin-bottom:8em;
+  }
+  .blog-container {
+    height: 37em;
+  }
+  .blog-post p {
+    outline: auto;
+    height:10.5em;
+  }
+  .blog-post img {
+    width: 100%;
+    height:10em;
+  }
+  .social-links li a i {
+    margin: 0.5em;
+  
   }
 }
 @media screen and (min-width: 62em) and (max-width:119em) {
+  .blog-container-wrapper {
+    margin-bottom:5.5em;
+  }
   .blog-container {
-  /* margin-top: 5em; */
-    margin-bottom:13.4em;
+    height:50em;
+  }
+  .blog-post{
+    min-width: 40em;
+  }
+  .blog-post p {
+    height:11em;
+    margin-bottom:1em;
+    font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
+  }
+  .blog-post h3 {
+    font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
+  }
+  .blog-post h4 {
+    font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
+  }
+  .blog-post a {
+    font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
+  }
+  .blog-post img {
+    width: 100%;
+    height:13em;
+    
   }
 }
