--- a/assets/css/style_article.css
+++ b/assets/css/style_article.css
@@ -85,49 +85,20 @@ rgba(255, 25, 224, 0.1)
 
 /* -------------- BLOG -------------- */
 .blog-container-wrapper {
-    padding: 0.5em 1em;
     margin-bottom: 5em;
-    height:auto;
-    width: auto;
-    /* outline: auto; */
+
 }
 .blog-container {
-    background-color: black;
-    position: relative;
-    top: -7em;
-    left:0;
     width:17em;
-    height:auto;
-    padding: 0 0.2em;
-    border-top: 3px solid ;
-    border-right: 3px solid ;
-    border-bottom: 3px solid;
-    border-left: 3px solid ;
-    border-image:linear-gradient(
-        to bottom,
-        rgba(8, 85, 201, 0.5),
-        rgba(8, 255, 255, 0.8),
-        rgba(255, 25, 224, 0.8),
-        rgba(255, 25, 224, 0.1)
-      ) 1 2 10% 90%;
+   
 }
 .blog-post {
-    height: auto;
+    height: 40em;
     width: 35em;
-    margin: 0;
-    /* padding:0.5em; */
+
     background-color: black;
-    border-top: 0px solid;
-    border-right: 0px solid;
-    border-bottom: 0px solid;
-    border-left: 0px solid;
-    border-image:linear-gradient(
-    to bottom,
-    rgba(8, 85, 201, 0.5),
-    rgba(8, 255, 255, 0.8),
-    rgba(255, 25, 224, 0.8),
-    rgba(255, 25, 224, 0.1)
-    ) 1 2 10% 90%; } 
+   
+    } 
 
 .blog-post h2 {
     /* font-size: clamp(0.3rem, 0.5vw + 0.8rem, 3rem); */
@@ -159,4 +130,29 @@ rgba(255, 25, 224, 0.1)
     top: 0;
 }
 
+}
+
+/* 600px */
+@media screen and (min-width: 37.5em) and (max-width:119em){
+  
+  .blog-container-wrapper {
+    margin-bottom: 8em;
+    margin-top:5em;
+  }
+
+}
+
+@media screen and (min-width: 48em) and (max-width:119em){
+    .blog-container-wrapper {
+        margin-bottom: 2em;
+        /* margin-top:5em; */
+      }
+
+      .blog-post {
+        height:auto;
+      }
+      .blog-post p,
+      .blog-post li {
+        font-size: clamp(0.2rem, 1vw + 0.7rem, 3rem);
+      }
 }
