--- a/assets/css/style_resources.css
+++ b/assets/css/style_resources.css
@@ -23,9 +23,8 @@ body {
   display: flex;
   justify-content: center;
   top: 0em;
-  margin:0;
   margin-top: 3em;
-  margin-bottom: 3.94em;
+  margin-bottom: 3.5em;
 }
 .blog-container {
   
@@ -40,7 +39,6 @@ body {
 .blog-post,
 .blog-post-2,
 .blog-post-3 {
-  /* outline: auto; */
   max-width: 100%;
   height: auto;
   margin:0;
@@ -120,19 +118,22 @@ body {
 @media screen and (min-width: 0em) and (max-width:119em){
 
     /* -------------- BLOG -------------- */
-    .blog-container {
-      height:20em;
-      position: relative;
-      top: 0em;
-      left: 0em;
+    .blog-container-wrapper{
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      padding: 1em 0;
+      margin-top: 1em;
+      margin-bottom: 1em;
+    }
+
+    .blog-container {
+      display: flex;
+      justify-content: center;
+      height:20em;
+     width: 15em;
       gap: 1em;
-      margin: 0;
-      /* padding: 10em; */
-      margin: 2em 0;
     }
   
     .blog-post,
@@ -142,9 +143,6 @@ body {
       margin: 0;
       padding:0em;
      
-      width: 15em;
-      /* max-width: auto; */
-      height: auto;
     }
   
     .blog-post p, 
@@ -188,36 +186,56 @@ body {
       font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
     }}
 
+
+
 @media screen and (min-width: 23em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.blog-container {
+.blog-container-wrapper {
+ margin: 4em 0;
+}
+  .blog-container {
   gap: 3em;
-  margin-top: 5em;
-  margin-bottom:5em;
-  width: auto;
-  }
   
-}
-@media screen and (min-width: 25em)and (max-width:119em) {
-  /* -------------- BLOG -------------- */
-.blog-container {
-    margin-bottom:9.2em;
-  }
-}
-/* HEIGHT !! */
-@media screen and (min-height: 50.75em) and (max-width:119em){
-  /* -------------- BLOG -------------- */
-.blog-container {
-    margin-bottom:13em;
   }
 }
 
+@media screen and (min-height: 50.75em) and (max-width:119em){
+ 
+ .blog-container-wrapper{
+  /* margin:9em 0; */
+  margin-bottom: 10em;
+  margin-top:7em;
+} 
+.blog-container {
+  gap: 5em;
+}
+}
+
+@media screen and (min-width: 25em)and (max-width:119em) {
+  /* -------------- BLOG -------------- */
+.blog-container-wrapper {
+margin-top:5em;
+margin-bottom:7em;
+}
+  .blog-container {
+    width: 16em;
+  }
+}
+
+
 /* 600px */
 @media screen and (min-width: 37.5em) and (max-width:119em){
-  .blog-container {
-    margin-bottom:13em;
-  }
   
+  .blog-container-wrapper {
+    margin-bottom: 7em;
+    margin-top:6em;
+  }
+  .blog-container {
+    margin-bottom: 0em;
+    gap: 4em;
+  }
+
+/* RESETTER */
 .blog-post {
   min-width: auto;
 }
@@ -226,15 +244,13 @@ body {
 @media screen and (min-width: 48em) and (max-width:119em){
 .blog-container-wrapper {
 
-  height:auto;
-  display: flex;
-  justify-content: center;
+margin-top:10em;
+margin-bottom:17em;
 }
   .blog-container {
-    /* margin-top:5em; */
-    margin-bottom:13em;
+    
     gap: 3.5em;
-    height:auto;
+
   }
   .blog-post,
   .blog-post-2,
@@ -244,11 +260,16 @@ body {
 }
 /* 992px */
 @media screen and (min-width:62em) and (max-width:119em){
-  .blog-container {
-  /* margin-top: 10em; */
-  gap: 5em;
-    margin-bottom:23.4em;
-  }
+  .blog-container-wrapper {
+
+    margin-top:15em;
+    margin-bottom:23em;
+    }
+      .blog-container {
+        
+        gap: 7em;
+    
+      }
 }
 
 
